# 211-331_Safonov

./: README.md  creds.json  main.cpp  mainwindow.cpp
Lab1/: CMakeLists.txt
Lab1_new/: CMakeLists.txt  antidebug.cpp  antidebug.h  credentialsdialog.cpp  credentialsdialog.h  credentialsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
dbglauncher/: main.cpp
